--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -418,6 +418,11 @@
   <ItemGroup>
     <None Include="Debug\DXTrace.inl" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Externals\lzo.vcxproj">
+      <Project>{614aa57f-58d7-45a8-a5ff-93f04b05fac6}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
