--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -250,6 +250,7 @@
     <ClCompile Include="xrstring.cpp" />
     <ClCompile Include="xr_ini.cpp" />
     <ClCompile Include="xr_shared.cpp" />
+    <ClCompile Include="xr_token.cpp" />
     <ClCompile Include="xr_trims.cpp" />
     <ClCompile Include="_compressed_normal.cpp" />
     <ClCompile Include="_math.cpp" />
@@ -364,6 +365,7 @@
     <ClInclude Include="xr_resource.h" />
     <ClInclude Include="xr_shared.h" />
     <ClInclude Include="xr_shortcut.h" />
+    <ClInclude Include="xr_token.h" />
     <ClInclude Include="xr_trims.h" />
     <ClInclude Include="xr_vector_defs.h" />
     <ClInclude Include="_bitwise.h" />
