More compile-time distanglement.

--- a/src/utils/xrMiscMath/xrMiscMath.vcxproj.filters
+++ b/src/utils/xrMiscMath/xrMiscMath.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="vector3d_ext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cylinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
