--- a/src/utils/xrMiscMath/xrMiscMath.vcxproj
+++ b/src/utils/xrMiscMath/xrMiscMath.vcxproj
@@ -128,6 +128,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cylinder.cpp" />
     <ClCompile Include="matrix.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
