--- a/src/xrGame/xrGame.vcxproj.filters
+++ b/src/xrGame/xrGame.vcxproj.filters
@@ -5994,6 +5994,9 @@
     <ClInclude Include="ui\UIAchievements.h">
       <Filter>UI\Common\PDA\Statistics &amp; Rankings</Filter>
     </ClInclude>
+    <ClInclude Include="ui\UIRankingsCoC.h">
+      <Filter>UI\Common\PDA\Statistics &amp; Rankings</Filter>
+    </ClInclude>
     <ClInclude Include="ui\UIRankingWnd.h">
       <Filter>UI\Common\PDA\Statistics &amp; Rankings</Filter>
     </ClInclude>
@@ -9482,6 +9485,9 @@
       <Filter>UI\Common\PDA\MAP</Filter>
     </ClCompile>
     <ClCompile Include="ui\UIAchievements.cpp">
+      <Filter>UI\Common\PDA\Statistics &amp; Rankings</Filter>
+    </ClCompile>
+    <ClCompile Include="ui\UIRankingsCoC.cpp">
       <Filter>UI\Common\PDA\Statistics &amp; Rankings</Filter>
     </ClCompile>
     <ClCompile Include="ui\UIRankingWnd.cpp">
