~ display condition in Artefact UI stat info (for degradation) ~ Refactor renderer GPU support detection
= Fix Main/Worker thread sync
= Fix xrDebug expression/description mismatch, added nosegment default on BugTrap error msgbox (not used in CoC)
= Fix memory leak with file handles in dx10ResourceManager_Resources.cpp
= Fix R3/R4 SM_4_1 shader name
= Fix IReader:close()
- Remove CopyProtection, Securom and Parental controls

--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -289,6 +289,7 @@
       <Filter>OS</Filter>
     </ClCompile>
     <ClCompile Include="xrSyncronize.cpp" />
+    <ClCompile Include="Event.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FTimer.h">
@@ -599,6 +600,7 @@
     </ClInclude>
     <ClInclude Include="xrSyncronize.h" />
     <ClInclude Include="..\build_config_defines.h" />
+    <ClInclude Include="Event.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="xrCore.rc">
